# astroberry-server-wui

./: CMakeLists.txt  README.md
debian/: changelog  config  control  copyright  postinst  postrm  prerm  rules  templates
files/: astroberry  astroberry.crt  astroberry.key  astroberry.version.cmake  astroberry_ssl  gpspanel.service  indiwebmanager.service  novnc.service
files/html/: 404.html  500.html  index.html  panels.html
files/html/files/: indiweb.css
files/indiweb/: form.tpl
files/indiwebmanager/: database.py  indi_server.py  indiwebmanager.service  main.py
files/indiwebmanager/views/: form.tpl
files/indiwebmanager/views/css/: main.css
files/indiwebmanager/views/js/: main.js
files/novnc/: index.html  novnc.service
files/novnc/app/: ui.js
files/vnc/: index.html
files/vnc/app/: ui.js
